# images-to-pallete

./: .gitignore  .vercelignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  runtime.txt  vercel.json
api/: index.py
app/: __init__.py  main.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/utils/: color_extractor.py
