[project]
name = "images-to-pallete"
version = "0.1.0"
description = "Extract unique colors from images"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pillow==10.1.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-core==2.14.1",
]
